2013-02-12  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/system.d: Update.

2013-02-12  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/sysreg-1.s: Add tests of rmr_el1, rmr_el2 and rmr_el3.
	* gas/aarch64/sysreg-1.d: Update.
	* gas/aarch64/illegal.s: Add tests of daifset and daifclr.
	* gas/aarch64/illegal.d: Update.

2013-02-12  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/illegal-2.s: Add test case.
	* gas/aarch64/illegal-2.l: Likewise.

2013-01-22  Alan Modra  <amodra@gmail.com>

	Apply mainline patches
	2012-11-23  Alan Modra  <amodra@gmail.com>
	* gas/ppc/astest2.d: Pass -Mppc to objdump.

	2012-11-14  Ulrich Weigand  <uweigand@de.ibm.com>
	* gas/ppc/astest.d: Update for fixup changes.
	* gas/ppc/astest64.d: Likewise.
	* gas/ppc/astest2.d: Likewise.
	* gas/ppc/astest2_64.d: Likewise.
	* gas/ppc/test1elf32.d: Likewise.
	* gas/ppc/test1elf64.d: Likewise.

	2012-10-29  Alan Modra  <amodra@gmail.com>
	* gas/cfi/cfi.exp: Remove redundant ppc test.  Exclude
	powerpc-pe targets from cfi-common-6 test.
	* gas/cfi/cfi-ppc-1.d: Use objdump to handle pe.
	* gas/cfi/cfi-ppc-1.s: Don't use .type and .size.
	* gas/ppc/ppc.exp: Exclude various tests for powerpc-pe.  Exclude
	vle tests for le targets.
	* gas/ppc/476.d, * gas/ppc/476.s: Update for le output.  Use .text
	rather than section directive with quotes.
	* gas/ppc/a2.d,	* gas/ppc/a2.s: Likewise.
	* gas/ppc/altivec.d, * gas/ppc/altivec.s: Likewise.
	* gas/ppc/altivec2.d: Likewise.
	* gas/ppc/altivec_and_spe.d: Likewise.
	* gas/ppc/astest.d: Likewise.
	* gas/ppc/astest2.d: Likewise.
	* gas/ppc/astest2_64.d: Likewise.
	* gas/ppc/astest64.d: Likewise.
	* gas/ppc/booke.d, * gas/ppc/booke.s: Likewise.
	* gas/ppc/cell.d, * gas/ppc/cell.s: Likewise.
	* gas/ppc/common.d, * gas/ppc/common.s: Likewise.
	* gas/ppc/e500.d, * gas/ppc/e500.s: Likewise.
	* gas/ppc/e500mc.d, * gas/ppc/e500mc.s: Likewise.
	* gas/ppc/e500mc64_nop.d, * gas/ppc/e500mc64_nop.s: Likewise.