@@ -1,5 +1,11 @@
 2013-02-12  Yufeng Zhang  <yufeng.zhang@arm.com>
 
+	* gas/aarch64/int-insns.d: Update.
+	* gas/aarch64/mov.d: Update.
+	* gas/aarch64/reloc-insn.d: Update.
+
+2013-02-12  Yufeng Zhang  <yufeng.zhang@arm.com>
+
 	* gas/aarch64/system.d: Update.
 
 2013-02-12  Yufeng Zhang  <yufeng.zhang@arm.com>
